# agentsday-hackathon

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  requirements.txt
agents/: __init__.py
agents/ingestion/: set_webhook.py  telegram_bot.py
agents/organizer/: README.md  __init__.py  config.yaml
agents/researcher/: README.md  __init__.py  brain.py  classifier.py  cli.py  clients.py  config.py  conversation.py  markdown.py  models.py  service.py  trace.py
backup/: 2026-05-01-agent-frameworks-elixir.md  2026-05-01-decision-theory.md  2026-05-01-game-of-life.md  2026-05-01-tatica-do-quadrado.md
brain/: .graph_state.json  README.md  changelog.md  graph.json  graph_diff.json  graph_history.json  index.md  open_questions.md  schema.md
brain/.obsidian/: graph.json  workspace.json
brain/companies/: multiverse-computing.md
context-non-slop/: README.md
frontend/: README.md  package-lock.json  package.json  vite.config.js
input/: 2026-05-01-131922-decision-theory.md  2026-05-01-135429-spacexs-starship-development-exceeds-15-billion-aiming-for-airline-lik.md  2026-05-01-135824-x-post-by-naval-the-promise-of-ai-is-no-ui.md  2026-05-01-all-tomorrows.md  2026-05-01-batalha-de-aljubarrota.md  2026-05-01-demis-hassabis.md  2026-05-01-design-patterns.md  2026-05-01-game-theory.md  2026-05-01-intelligence-vs-agency-karpathy.md  2026-05-01-lei-de-murphy.md  2026-05-01-multiverse-computing.md
onboarding/: 2026-05-01-fibonacci.md  2026-05-01-monte-carlo-markov.md  2026-05-01-self-hosting.md
runs/: latest_report.md  researcher_trace.jsonl  trace.jsonl
(+58 files in other folders)
