[project]
name = "agentsday-hackathon"
version = "0.1.0"
description = "Personal second brain agents for the Agents Day hackathon."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "deepagents>=0.4.12",
  "langchain-google-genai",
]

[project.scripts]
organizer = "agents.organizer.second_brain_agent.cli:main"

[tool.setuptools.packages.find]
include = ["agents*"]
